--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <tr>
         <td><a href="https://www.salpaus.fi"target="_blank">eka sisältö</a></td>
         <td><a href="tyyliharjoitus.html">toka sisältö</td>
-        <td>kolmas sisältö</td>
+        <td><a href="portfolio.html">kolmas sisältö</td>
       </tr>
       <tr>
         <td>eka sisältö</td>
